2001-07-02  Tom Yu  <tlyu@mit.edu>

	* update_utmp.c (pty_update_utmp): Remember to chop off leading
	"/dev/" for the non-sysV case.  Handle lseek() returning non-zero
	yet non-negative values (it usually does... :-), so that we can
	actually write somewhere not at the beginning of the utmp file if
	necessary.

2001-06-28  Ken Raeburn  <raeburn@mit.edu>

	* update_utmp.c (pty_update_utmp): Don't copy host if it's a null
	pointer.

	* dump-utmp.c (print_ut): Use size of ut_name field, not ut_user,
	which may not exist, for width when printing ut_name field value.
	Specify width when printing hostname, it may be unterminated.
	(main): Move utp and utxp declarations closer to their usages, and
	make both conditionalized so they're not declared if they're not
	used.

2001-06-21  Ezra Peisach  <epeisach@mit.edu>

	* libpty.h: Change variable line in prototype to tty_line to
	prevent shadowing.

2001-06-11  Ezra Peisach  <epeisach@mit.edu>

	* pty-int.h: Provide revoke() prototype if system headers lacking. 

	* logwtmp.c: Provide logwtmp() prototype if needed. 

	* configure.in: Check for system provided getutmp(), logwtmp() and
	revoke() prototypes.  Check for util.h, libutil.h.

	* update_wtmp.c: Provide prototype for getutmp() if needed.

2001-05-15  Tom Yu  <tlyu@mit.edu>

	* getpty.c: Make pty_getpty() into ptyint_getpty_ext(), which has
	an extra argument that determines whether to call grantpt() and
	unlockpt() on systems that support it.  The new pty_getpty() will
	simply call the extended version.  This is to support some
	wackiness needed by pty_paranoia.c tests.

	* pty-int.h: Add prototype for ptyint_getpty_ext().

	* pty_paranoia.c: Add rant about ptys and quirks therein.  Needs
	to be updated somewhat.  Add some more paranoia for the case where
	we actually succeed in opening the slave of a closed master and
	then succeed in opening the same master.  This program will get
	rewritten at some point to actually see what things result in EOFs