@@ -1,3 +1,12 @@
+2001-08-29  Ken Raeburn  <raeburn@mit.edu>
+
+	* sane_hostname.c: Include socket-utils.h and fake-addrinfo.c.
+	(FAI_PREFIX): Define to krb5int_pty.
+	(sockaddrlen, do_ntoa): Deleted.
+	(pty_make_sane_hostname): Use socklen instead of sockaddrlen.
+	Delete support for not having getnameinfo.  Move code for do_ntoa
+	inline.
+
 2001-07-02  Tom Yu  <tlyu@mit.edu>
 
 	* update_utmp.c (pty_update_utmp): Remember to chop off leading
